<resources>
    <string name="app_name">EunjisApplication</string>
    <string name="move1">move1</string>
    <string name="_1">1</string>
    <string name="button">Button</string>
    <string name="move2">move2</string>
    <string name="move3">move3</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="change_text">change text</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="학교검색">학교검색</string>
    <string name="event">이벤트</string>
    <string name="schoolsearch">학교검색</string>
    <string name="board">게시판</string>
    <string name="start">시작하기</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="home">홈페이지</string>
    <string name="home1">홈페이지</string>
    <string name="home3">홈페이지</string>
</resources>
